# advent_of_code

./: .gitignore  README.md
2023/: Cargo.toml  README.md  day-01.bench.txt
2023/day-01/: Cargo.toml  input1.txt  input2.txt
2023/day-02/: Cargo.toml  input2.txt
2023/day-03/: Cargo.toml  input2.txt
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml  input2.txt
2023/day-05/src/: part1.rs  part2.rs
2023/day-06/: Cargo.toml  input2.txt
2023/day-07/: Cargo.toml  input2.txt
2023/day-08/: Cargo.toml  input2.txt
2023/day-09/: Cargo.toml  input2.txt
2023/day-10/: Cargo.toml
2024/: .env  Cargo.toml  Justfile  README.md  go.mod
2024-go/: Justfile
2024-rust/: Cargo.toml  README.md
2024/.cargo/: config.toml
2024/day-01/go/part1/: part1.go
2024/day-01/go/part2/: part2.go
2024/day-01/part1/: part1.go  part1_test.go
2024/day-01/part2/: part2.go  part2_test.go
2024/day-01/rust/src/: part1.rs  part2.rs
2024/day-02/go/part1/: part1.go
2024/day-02/go/part2/: part2.go
2024/day-02/rust/: Cargo.toml
2024/day-02/rust/src/: part1.rs  part2.rs
2024/day-03/go/part1/: part1.go  part1_test.go
2024/day-03/go/part2/: part2.go  part2_test.go
2024/day-03/rust/: Cargo.toml
2024/day-03/rust/src/: part1.rs  part2.rs
2024/template-go/: cargo-generate.toml
2024/template-go/part1/: part1.go  part1_test.go
2024/template-go/part2/: part2.go
2024/template-rust/: Cargo.toml
2024/template/part2/: part2.go  part2_test.go
2024/util/: util.go
2024/util-go/: util.go
2024/xtask/: Cargo.toml
2024/xtask/src/: go.rs  main.rs  rust.rs  util.rs
(+62 files in other folders)
