[workspace]
resolver = "2"

members = [
  "day-*/rust",
  "util-rust",
  "xtask",
]

[workspace.dependencies]
util = { path = "./util"}
anyhow = "1.0.75"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
itertools = "0.13.0"
rayon = "1.8.0"
petgraph = "0.6.4"
