[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.6", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.20"
